@@ -1,4 +1,5 @@
 0.5.0 - currently working on
+- [#1000] Fix: 'mailto:' is displayed when field 'email' is empty
 - [#2120] Change: Use tabs for indentation only at the beginning of lines
 - [#2237] Fix: Most of the contactslist tests fail with the current TYPO3 trunk
 - [#2091] Change: Use the createFakeFrontEnd function from the testing framework in the Contacts List
